# oceanpack

./: .buildinfo  .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  LICENSE  LICENSE.txt  Makefile  README.md  changelog.html  conftest.py  environment.yml  examples.html  examples.ipynb  genindex.html  index.html  installation.html  justfile  license.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: dependabot-reviewer.yml  docs.yml  main.yml
_modules/: index.html
_modules/oceanpack/: helpers.html  io_routines.html
_sources/: index.rst.txt  installation.rst.txt  py-modindex.rst.txt
_sources/api/: modules.rst.txt  oceanpack.rst.txt
api/: modules.html  oceanpack.html
docs/: Makefile  _config.yml  _sphinx_config.py  _toc.yml  cli.md  conf.py  examples.ipynb  index.md  index.rst  references.bib  requirements.txt  workflow.md
docs/_config/themes/: furo.py  sphinx_immaterial.py
docs_old/: _config.yml  index.md  requirements.txt
docsrc/: Makefile  conf.py  examples.ipynb  genindex.rst  index.rst  installation.rst  refs.bib
notebooks/: examples.ipynb
oceanpack/: README.md  __init__.py  helpers.py  io_routines.py  setup.cfg  setup.py
oceanpack/notebooks/: examples.ipynb
oceanpack/tests/: __init__.py  test_co2_calcs.py  test_helpers.py  test_oceanpack.py
src/oceanpack/: __init__.py  cli.py  helpers.py  io_routines.py  oceanpack.py  oceanview_variables.csv  quality_control.py  system_states.csv
src/oceanpack/app/: __init__.py  cli.py
src/oceanpack/app/controllers/: __init__.py  data_controller.py
src/oceanpack/app/models/: __init__.py  data_processor.py  filehandler.py  filesource.py
src/oceanpack/app/views/: __init__.py  data_view.py
src/oceanpack/notebooks/: examples.ipynb
src/oceanpack/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_co2_calcs.py  test_data_processor.py  test_filehandler.py  test_filesource.py  test_helpers.py  test_oceanpack.py  test_pipeline_integration.py
